se actualiza frontend

--- a/web/templates/logistica/index.html
+++ b/web/templates/logistica/index.html
@@ -12,8 +12,7 @@
         <span class="user-nav__area">({{ area.nombre }})</span>
     </div>
     <div>
-        <a href="{% url 'users:perfil' %}" class="user-nav__link">Mi Perfil</a>
-        <a href="{% url 'users:logout' %}" class="user-nav__link">Cerrar Sesión</a>
+        <a href="{% url 'users:logout' %}" class="user-nav__link">🚪 Cerrar Sesión</a>
     </div>
 </nav>
 
