--- a/web/templates/tecnicos/index.html
+++ b/web/templates/tecnicos/index.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="{% static 'css/supervision.css' %}">
 {% endblock %}
 
+{% block container_class %}container-fluid{% endblock %}
+
 {% block content %}
 <!-- Navegación de usuario -->
 <nav class="user-nav">
