--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     {% block body %}
-    <div class="container">
+    <div class="{% block container_class %}container{% endblock %}">
         {% block content %}{% endblock %}
 
         <footer class="footer">
