--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Procesador de Huellero{% endblock %} - CHVS</title>
+    <title>{% block title %}Nominapp{% endblock %} - CHVS</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% block extra_css %}{% endblock %}
