--- a/web/templates/users/login.html
+++ b/web/templates/users/login.html
@@ -8,7 +8,7 @@
     <div class="login-card">
         <div class="login-header">
             <div class="login-icon">🕐</div>
-            <h1 class="login-title">Procesador de Huellero</h1>
+            <h1 class="login-title">Nominaap</h1>
             <p class="login-subtitle">Corporación Hacia un Valle Solidario</p>
         </div>
 
